--- a/Info_management/Buzzer_Act2.html
+++ b/Info_management/Buzzer_Act2.html
@@ -117,8 +117,8 @@
                     <input type="text" id="p2Key" value="l">
                 </div>
             </div>
-            <div>
-                <button>Ready</button>
+            <div class="button">
+                <button onclick="ready2()">Ready</button>
             </div>
             <div class="teamDisplay">
                 <div class="team" id="team2">
