--- a/sample folder/Info_Mgmt.html
+++ b/sample folder/Info_Mgmt.html
@@ -8,6 +8,8 @@
         * {
             margin: 0;
             padding: 0;
+            font-family: Arial, Helvetica, sans-serif;
+
         }
         
         header {
