unfinished checkbox activity

--- a/sample folder/Info_Mgmt.html
+++ b/sample folder/Info_Mgmt.html
@@ -22,7 +22,7 @@
             display: flex;
             justify-content: center;
             background-color: gray;
-            padding-block: 19.5rem;
+            padding-block: 18.7%;
         }
         footer {
             display: flex;
@@ -39,7 +39,7 @@
 <body>
     <header>
         <div class="header">
-            <h1>Activity #</h1>
+            <h1>Activity 1</h1>
         </div>
         <div>
             <h1>Activity Name</h1>
@@ -52,7 +52,7 @@
     </main>
     <footer>
         <div>
-            <h1>Made by :</h1>
+            <h1>Made by: Kiel Andrew Gavanez</h1>
         </div>
     </footer>
 </body>
